--- a/api/src/main/resources/templates/common/head.html
+++ b/api/src/main/resources/templates/common/head.html
@@ -2,7 +2,7 @@
     <title>[(${bbcow_t})]</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no" />
 
     <meta name="applicable-device" content="pc,mobile">
     <meta name="description" th:attr="content=${bbcow_d}">
